<resources>

    <string name="app_name">PPGi</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Medit der RWTH Aachen </string>
    <string name="nav_header_subtitle">mengjun.zeng@rwth-aachen.de</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_capture">Capture</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_history">History</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start_capture">Capture</string>
    <string name="stop_capture">Stop</string>
    <string name="switch_front">Front</string>
    <string name="switch_back">Back</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contact Us</string>
    <string name="ppgi_howto"> With PPGI also low-frequency blood volume shifts (less than 0.25 Hz) can be analysed. During such examinations on several subjects’ forehead, local bounded “clouds” of phase synchronous oscillations in blood volume were detected. These continuous regions of same phase appear at frequencies around 0.1 Hz. It could be monitored that these clouds move along the forehead, sometimes vanish or arise new. An example of a video sequence of such measurement can be downloaded here.</string>
    <string name="ppgi_description">The PPGI is a contactless measurement system for the functional registration of blood perfusion in the upper skin layers. As an enhancement of the classical photoplethysmography (PPG), it is also based on measuring the optical damping of skin, which varies according to changing blood volumes. But for PPGI instead of a single PPG sensor, a high sensitive CCD camera is used. This enables detecting the skin perfusion with spatial resolution.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="ppgi_description_wiki">A photoplethysmogram (PPG) is an optically obtained plethysmogram that can be used to detect blood volume changes in the microvascular bed of tissue.[1][2] A PPG is often obtained by using a pulse oximeter which illuminates the skin and measures changes in light absorption.[3] A conventional pulse oximeter monitors the perfusion of blood to the dermis and subcutaneous tissue of the skin.


Finger pulse oximeter
With each cardiac cycle the heart pumps blood to the periphery. Even though this pressure pulse is somewhat damped by the time it reaches the skin, it is enough to distend the arteries and arterioles in the subcutaneous tissue. If the pulse oximeter is attached without compressing the skin, a pressure pulse can also be seen from the venous plexus, as a small secondary peak.

The change in volume caused by the pressure pulse is detected by illuminating the skin with the light from a light-emitting diode (LED) and then measuring the amount of light either transmitted or reflected to a photodiode.[4] Each cardiac cycle appears as a peak, as seen in the figure. Because blood flow to the skin can be modulated by multiple other physiological systems, the PPG can also be used to monitor breathing, hypovolemia, and other circulatory conditions.[5] Additionally, the shape of the PPG waveform differs from subject to subject, and varies with the location and manner in which the pulse oximeter is attached.</string>
    <string name="ppgi_link1"> https://www.medit.hia.rwth-aachen.de/en/research/research/single/project/photoplethysmography-imaging-ppgi-118 </string>
    <string name="ppgi_link2">  https://en.wikipedia.org/wiki/Photoplethysmogram </string>
    <string name="ppgi_howto_details">Plethysmographic signals were measured remotely (> 1m) using ambient light and a simple consumer level digital camera in movie mode. Heart and respiration rates could be quantified up to several harmonics. Although the green channel featuring the strongest plethysmographic signal, corresponding to an absorption peak by (oxy-) hemoglobin, the red and blue channels also contained plethysmographic information. The results show that ambient light photo-plethysmography may be useful for medical purposes such as characterization of vascular skin lesions (e.g., port wine stains) and remote sensing of vital signs (e.g., heart and respiration rates) for triage or sports purposes.

Go to:
1. Introduction
Detection of the cardio-vascular pulse wave traveling through the body is referred to as Plethysmography (‘Plethysmos’ = increase in Greek) and can be done by means such as variations in air pressure, impedance, or strain. Photo-plethysmography (PPG), introduced in the 1930’s [1] uses light reflectance or transmission and is the least expensive method and simple to use. PPG is based on the principle that blood absorbs light more than surrounding tissue so variations in blood volume affect transmission or reflectance correspondingly. Applications of PPG include monitoring of oxygen saturation (pulse oxymetry), heart (HR) and respiration (RR) rates, blood pressure, cardiac output, assessment of autonomic functions and detection of peripheral vascular diseases. Remote, non-contact pulse oxymetry and PPG imaging have been explored only relatively recently [2, 3].

To our knowledge, PPG has always been performed with dedicated light sources and typically red and/or infra-red (IR) wavelengths. Due to the historical emphasis of PPG on pulse oxymetry and the associated need to sample relatively deep (e.g., 1 mm) veins and arteries, the visible spectrum (with a shallower penetration depth in skin) has often been ignored as a light source for PPG. Publications describing non-red visible light sources for PPG (e.g. green) are either recent [4, 5] or relatively old [6, 7], and, in all cases, contact probes were used. Ambient visible light is often considered a source of noise [8–11] when using IR light sources and detectors sensitive for IR and visible light.

In this communication, we show that PPG signals can be remotely (several m) measured on the human face with normal ambient light as the source and a simple digital, consumer level photo camera in movie mode. At distances of 1.5 m, signal to noise ratio (SNR) was such that up to four harmonics of the fundamental HR frequency can be measured, thus rendering not only the HR but also the shape of the waveform. In addition to HR and RR monitoring, we show that PPG imaging can be used to characterize regions of high and low pulsatility on facial port wine stains (PWS). PWS are cutaneous capillary malformations characterized by a higher number and/or a larger size of the pathologic capillaries [12]. A better understanding of the hemodynamics involved in PWS is of great interest to improve laser therapeutic outcome.

Our PPG results suggest that not only pulsatility but also phase information regarding the cardio-vascular waveform may be deduced. Although we will attempt to interpret clinical results and discuss their relevance, the main purpose of this paper is to demonstrate remote PPG (imaging) with ambient light. To the best of our knowledge, remote PPG (imaging) with ambient light has never been demonstrated.</string>
    <string name="ppgi_howto_reference_1">https://www.medit.hia.rwth-aachen.de/en/research/research/single/project/photoplethysmography-imaging-ppgi-118</string>
    <string name="ppgi_howto_reference_2"> green / verkruysse, w., svaasand, l. o., &amp; nelson, w. a. s. (2008). remote plethysmographic imaging using ambient light. optics express, 16(26), 21434-21445.</string>
    <string name="opencv_description">OpenCV (Open Source Computer Vision Library) is a library of programming functions mainly aimed at real-time computer vision. By using this library,We are able to analyze the runtime behaviors of current frames under different channels and extract the hidden information behind those visual parts."</string>
    <string name="opencv_details">place holder</string>
    <string name="opencv_links">https://opencv.org/</string>
    <string name="green_channels">Among the RGB Channels,the green channel featuring the strongest plethysmographic signal, corresponding to an absorption peak by (oxy-) hemoglobin, the red and blue channels also contained plethysmographic information. The results show that ambient light photo-plethysmography may be useful for medical purposes such as characterization of vascular skin lesions (e.g., port wine stains) and remote sensing of vital signs (e.g., heart and respiration rates) for triage or sports purposes.</string>
    <string name="green_details">place holder</string>
    <string name="title_activity_offline_measure">OfflineMeasureActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dialog_message">Please tell us wether the selected video is portrait or landscape</string>
    <string name="dialog_title">Rotation of this video</string>
    <string name="ok">Next</string>
    <string name="cancel">Cancel</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>